Add EF nugets and dbContext

--- a/FiasMusikArkiv.Server/appsettings.json
+++ b/FiasMusikArkiv.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Application": "Server=(local);Database=FiasMusikArkiv;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=no;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
