--- a/FiasMusikArkiv.Server/appsettings.Development.json
+++ b/FiasMusikArkiv.Server/appsettings.Development.json
@@ -1,7 +1,10 @@
 {
+  "ConnectionStrings": {
+    "Application": "Server=DESKTOP-3379VVR\\MSSQLSERVER01;Database=FiasMusikArkiv;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=no;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   }
